--- a/css/style.css
+++ b/css/style.css
@@ -65,6 +65,7 @@ span{
         flex-direction:column;
         text-align: center;
         padding-top: 100px;
+        margin-bottom: 20px;
       
     } 
 
@@ -77,7 +78,7 @@ span{
 } 
     
 article{
-width: 20%;
+    width: 20%;
    margin: 20px;
    padding: 40px;
    border: solid 1px #8e8b8b;
@@ -159,6 +160,129 @@ width: 20%;
     display: flex;
     justify-content: space-between;
     border: none;
+} 
+
+
+.sec6{
+    width: 100%;
+    height: 600px;
+    background: #424242; 
+    display: flex;
+    flex-direction:row;
+    align-items: center;
+    text-align: center;
+    background: #2d2d2d;
+
+} 
+.divp{
+    padding-bottom: 100px;
+} 
+
+.rob{
+    color: #289ec4;
+    background: none;
+} 
+.chevrons{
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+
+} 
+.imgchev{
+    width: 20%;
+    border-radius: 50%;
 
 } 
 
+i{
+  
+    padding: 15px;
+    background: #424242;
+} 
+
+.sec7 {
+    width: 100%;
+    /*display: flex;*/
+    /*align-items: center;*/
+} 
+
+.sec8{
+    width: 80%;
+    margin:0 auto;
+    margin-bottom: 100px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+} 
+.artsec8 {
+    width: 20%;
+    margin: 0;
+    padding: 0;
+    border: none;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+    background: #f4f4f4;
+} 
+
+.arth1{
+    width: 100%;
+    background: #28bbea;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin-top: 0;
+} 
+
+.radius{
+    width: 200px;
+    height: 200px;
+    background-color: #28bbea;
+    border-radius: 50%;
+    display: flex;
+    flex-direction: column;
+    justify-content:  center;
+} 
+.selplan{
+    background :#222222;
+    padding: 20px;
+} 
+
+.sec9{
+    width: 100%;
+    height: 250px;
+    background-color: #ecebe9;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+} 
+
+.imgsec9{
+    width: 90%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+} 
+
+.sec11{
+    width: 80%;
+    margin:0 auto; 
+    display: flex;
+    flex-wrap: wrap;
+   justify-content: space-between;
+} 
+
+
+.artsec11{
+    width: 30%;
+    margin: 10px;
+    padding: 0;
+    border: none;
+    background: #f4f4f4;
+
+} 
+.datacont i{
+    margin:5px;
+    background: none;
+} 
